--- a/exercice.html
+++ b/exercice.html
@@ -17,7 +17,7 @@
     <div class="row">
         <div class="col-lg-12">
             <label for="ville">Ville :</label>
-            <input type="text" id="ville" name="ville" placeholder="Entrer le nom de votre ville">
+            <input type="text" id="ville" name="ville" placeholder="Entrez le nom de votre ville">
         </div>
     </div>
 
@@ -51,10 +51,12 @@
         <div class="col-lg-12" id="carte"></div>
     </div>
 
+
 </div>
 
 
 
 <script src="exercice.js"></script>
+<script src="exercice2.js"></script>
 </body>
 </html>
