--- a/exercice.html
+++ b/exercice.html
@@ -39,6 +39,7 @@
             <div class = "col" id="pressAtm"></div>
             <div class = "col" id="vitVent"></div>
             <div class = "col" id="humidite"></div>
+            <div class = "col" id="description"></div>
         </div>
     </div>
 
